fix dark mode issues

--- a/public/assets/dashboard.css
+++ b/public/assets/dashboard.css
@@ -50,6 +50,10 @@ code#code code {
     background-color: #fafafa;
 }
 
+.bg-yellow {
+    background-color: yellow;
+}
+
 /*
  * Sidebar
  */
